# trymlir

./: CMakeLists.txt  README.txt
src/: ToyCalculatorDialect.cpp  ToyCalculatorDialect.h  ToyCalculatorDialect.td  ToyDialect.h  Toy_Dialect.td  driver.cpp
